--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 env/
 __pycache__/
 config.py
+
+# dependencies
+/PiGallery_v2/pi-gallery/node_modules
+
+# misc
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+/PiGallery_v2/pi-gallery/src/imgs
